--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(67, '2023-06-29 09:53:44', 15, 22.25), (66, '2023-06-29 09:53:39', 19, 22.89), (65, '2023-06-29 09:53:34', 15, 22.89), (64, '2023-06-29 09:53:28', 17, 23.54), (63, '2023-06-29 09:53:23', 15, 22.25)]\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "from sqlite3 import Error\n",
@@ -56,8 +64,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
