--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(67, '2023-06-29 09:53:44', 15, 22.25), (66, '2023-06-29 09:53:39', 19, 22.89), (65, '2023-06-29 09:53:34', 15, 22.89), (64, '2023-06-29 09:53:28', 17, 23.54), (63, '2023-06-29 09:53:23', 15, 22.25)]\n"
+      "[(152, '2023-06-29 14:48:16', 12, 23.54), (151, '2023-06-29 14:48:10', 12, 23.54), (150, '2023-06-29 14:48:05', 14, 23.54), (149, '2023-06-29 14:47:59', 14, 23.54), (148, '2023-06-29 14:47:54', 14, 23.54)]\n"
      ]
     }
    ],
@@ -60,6 +60,43 @@
     "    rows = select_alltasks(conn,5)\n",
     "    print(rows)\n",
     "    conn.close()        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'with' statement on line 2 (2118197572.py, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[25], line 13\u001b[0;36m\u001b[0m\n\u001b[0;31m    conn = create_connection('data.db')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'with' statement on line 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import csv\n",
+    "from \n",
+    "with open('output.csv', 'w', newline='') as csvfile:\n",
+    "  # 建立 CSV 檔寫入器\n",
+    "  #writer = csv.writer(csvfile)\n",
+    "\n",
+    "  # 寫入一列資料\n",
+    "  #writer.writerow(['姓名', '身高', '體重'])\n",
+    "\n",
+    "  # 寫入另外幾列資料\n",
+    "  #writer.writerow(['令狐沖', 175, 60])\n",
+    "  #writer.writerow(['岳靈珊', 165, 57])\n",
+    "\n",
+    "conn = create_connection('data.db')\n",
+    "if conn is not None:\n",
+    "    create_table(conn)\n",
+    "    rows = select_alltasks(conn,5)\n",
+    "    for row in rows:\n",
+    "      writer.writerow([row])"
    ]
   }
  ],
